install( FILES
    calendar.png
    cycling.png
    end.gif
    hiking.png
    kompassberg.png
    kompassberg_small.png
    loading.png
    running.png
    start.gif
    skiing.png
   DESTINATION /usr/share/activitydiary/icons
)

install( FILES hi128-app-activitydiary.png DESTINATION /usr/share/icons/hicolor/128x128/apps RENAME activitydiary.png)
install( FILES hi64-app-activitydiary.png DESTINATION /usr/share/icons/hicolor/64x64/apps RENAME activitydiary.png)
install( FILES hi48-app-activitydiary.png DESTINATION /usr/share/icons/hicolor/48x48/apps RENAME activitydiary.png)
install( FILES hi32-app-activitydiary.png DESTINATION /usr/share/icons/hicolor/48x48/apps RENAME activitydiary.png)



